--- a/springboot-mybatis/pom.xml
+++ b/springboot-mybatis/pom.xml
@@ -24,13 +24,20 @@
 			<artifactId>mysql-connector-j</artifactId>
 		</dependency>
 
-<!--		mybatis的起步依赖-->
-		<dependency>
-			<groupId>org.mybatis.spring.boot</groupId>
-			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>3.0.3</version>
-		</dependency>
 
+<!--&lt;!&ndash;		mybatis的起步依赖&ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>org.mybatis.spring.boot</groupId>-->
+<!--			<artifactId>mybatis-spring-boot-starter</artifactId>-->
+<!--			<version>3.0.3</version>-->
+<!--		</dependency>-->
+
+<!--		自定义的mybatis的起步依赖 -->
+		<dependency>
+			<groupId>com.ventsze</groupId>
+			<artifactId>dmybatis-springboot-starter</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
